--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,30 @@
   <body>
     <nav></nav>
     <div id="tab_bar"></div>
-    <section>
+    <section class="w-full h-screen">
+      <div id="home">
+        <div class="w-full h-3/4">
+          <div
+            class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center"
+          >
+            <input
+              class="outline outline-3 outline-dotted outline-blue-300 p-3 rounded-full shadow-sm"
+              placeholder="San Francisco"
+              type="search"
+              name=""
+              id=""
+            />
+            <button
+              class="w-32 rounded-full bg-white text-xl shadow-sm text-primary text-blue-200 font-semibold p-4"
+            >
+              Explorar
+            </button>
+          </div>
+          <div class="w-full h-full">
+            <img src="./img/sanFrancisco.jpg" alt="" />
+          </div>
+        </div>
+      </div>
       <div id="recomendadas"></div>
       <div id="rentas_destacadas"></div>
     </section>
