Se agregaron los estilos a las cards + EXTRACCIÓN de componentes y scrollbar:hide

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,65 @@
           </div>
         </div>
       </div>
-      <div id="recomendadas"></div>
+      <main class="w-full pl-3 pt-10 pb-10">
+        <p class="text-3xl font-semibold text-primary mb-6">Recomendados</p>
+        <div
+          id="recomendadas"
+          class="flex h-72 flex-row overflow-x-auto overscroll-x-auto overscroll-x-contain [@media(max-width:767px)]:scrollbar-hide space-x-10"
+        >
+          <div class="Card">
+            <div class="rounded-t-lg w-48 h-3/5 bg-norway bg-cover"></div>
+            <div class="card-details">
+              <p class="text-white font-bold text-xl">Noruega</p>
+              <p class="text-white text-base">Paisajes Increibles</p>
+            </div>
+          </div>
+          <div class="Card">
+            <div class="rounded-t-lg w-48 h-3/5 bg-new_york bg-cover"></div>
+            <div class="card-details">
+              <p class="font-bold text-xl">New York</p>
+              <p class="text-base">Gran ciudad, explora ahora!</p>
+            </div>
+          </div>
+          <div class="Card">
+            <div class="rounded-t-lg w-48 h-3/5 bg-yosemite bg-cover"></div>
+            <div class="card-details">
+              <p class="font-bold text-xl">Switzerland</p>
+              <p class="text-base">El mejor chocolate caliente que probarás</p>
+            </div>
+          </div>
+          <div class="Card">
+            <div class="rounded-t-lg w-48 h-3/5 bg-new_york bg-cover"></div>
+            <div class="card-details">
+              <p class="font-bold text-xl">New York</p>
+              <p class="text-base">Gran ciudad, explora ahora!</p>
+            </div>
+          </div>
+          <div class="Card">
+            <div class="rounded-t-lg w-48 h-3/5 bg-seattle bg-cover"></div>
+            <div class="card-details">
+              <p class="font-bold text-xl">Seattle</p>
+              <p class="text-base">El mejor chocolate caliente que probarás</p>
+            </div>
+          </div>
+          <div class="Card">
+            <div class="rounded-t-lg w-48 h-3/5 bg-new_york bg-cover"></div>
+            <div class="card-details">
+              <p class="text-tertiary font-bold text-xl">New York</p>
+              <p class="text-tertiary text-base">Gran ciudad, explora ahora!</p>
+            </div>
+          </div>
+          <div class="Card">
+            <div class="rounded-t-lg w-48 h-3/5 bg-seattle bg-cover"></div>
+            <div class="card-details">
+              <p class="text-white font-bold text-xl">Seattle</p>
+              <p class="text-white text-base">
+                El mejor chocolate caliente que probarás
+              </p>
+            </div>
+          </div>
+        </div>
+      </main>
       <div id="rentas_destacadas"></div>
     </section>
     <footer></footer>
