--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,71 @@
           </div>
         </div>
       </main>
-      <div id="rentas_destacadas"></div>
+      <div class="px-3 h-auto w-full" id="rentas_destacadas">
+        <p class="text-3xl text-primary font-semibold pb-6 mt-2">
+          Rentas Destacadas
+        </p>
+        <div
+          class="w-full h-full flex-col space-y-6 items-center justify-center"
+        >
+          <div class="Card-rentas bg-chicago">
+            <p class="CardTitle">Chicago</p>
+            <p class="">2 habitaciones, baño y cocina</p>
+          </div>
+          <div class="Card-rentas bg-LA">
+            <p class="CardTitle">Los Angeles</p>
+            <p class="">4 habitaciones, 3 baños, cocina y piscina privada</p>
+          </div>
+          <div class="Card-rentas bg-miami">
+            <p class="CardTitle">Miami</p>
+            <p class="">
+              3 habitaciones, 2 baños, cocina y excelente vista al mar
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="w-full h-full px-6" id="faqs">
+        <div class="w-full h-full flex flex-col space-y-4">
+          <p class="text-3xl text-primary font-semibold mt-6">FAQs</p>
+          <div>
+            <p class="text-xl font-semibold text-primary">
+              Política de Cancelación
+            </p>
+            <p class="font-medium pt-2">
+              Para estancias menores a una semana es importante avisar con 3
+              días de anticipación, de caso contario será sancionado.
+            </p>
+          </div>
+          <div>
+            <p class="text-xl font-semibold text-primary">Métodos de pago</p>
+            <p class="font-medium pt-2">
+              Aceptamos distintos métodos de pago: VISA, MasterCard, American
+              Express, Paypal y Binance.
+            </p>
+          </div>
+          <div>
+            <p class="text-xl font-semibold text-primary">Mascotas</p>
+            <p class="font-medium pt-2">
+              El tema de las mascotas dependerá directamente del anfitrión.
+            </p>
+          </div>
+          <div>
+            <p class="text-xl font-semibold text-primary">
+              Información de Seguridad
+            </p>
+            <p class="font-medium pt-2">
+              Todas nuestras estancias cuentan con seguro en caso de accidentes.
+            </p>
+          </div>
+          <div>
+            <p class="text-xl font-semibold text-primary">Estancias Largas</p>
+            <p class="font-medium pt-2">
+              Contamos con estancias de hasta 3 meses, en este caso es requerido
+              un anticipo con un monto del 50% del valor de la renta.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
     <footer></footer>
   </body>
