--- a/public/index.html
+++ b/public/index.html
@@ -11,39 +11,53 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Platzi Travel</title>
   </head>
   <body class="font-Montserrat">
     <nav></nav>
-    <div id="tab_bar"></div>
-    <section class="w-full h-screen">
-      <div id="home">
+
+    <section class="w-full h-3/4 lg:relative">
+      <div class="w-full h-3/4 lg:relative" id="home">
         <div class="w-full h-3/4">
           <div
-            class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center"
+            class="w-full h-full flex flex-col absolute space-y-96 py-4 items-center lg:space-y-0 lg:items-start lg:pt-32 lg:justify-start"
           >
             <input
-              class="w-8/12 outline outline-3 outline-dotted outline-blue-300 p-3 rounded-full shadow-sm transition duration-300 focus-within:shadow-sm focus:ring-2 focus:w-11/12"
+              class="w-8/12 outline outline-3 outline-dotted outline-blue-300 p-3 rounded-full shadow-sm transition duration-300 focus-within:shadow-sm focus:ring-2 focus:w-11/12 lg:hidden"
               placeholder="San Francisco"
               type="search"
               name=""
               id=""
             />
+            <div class="hidden lg:h-auto lg:w-2/5 lg:flex pb-6">
+              <p class="text-4xl ml-16 font-bold text-black">
+                Encuentra más ubicaciones como esta
+              </p>
+            </div>
             <button
-              class="w-48 rounded-full bg-white text-lg shadow-sm text-primary text-blue-200 font-semibold p-4 transition-all duration-500 ease-in-out hover:bg-primary hover:text-white transform hover:-translate-y-1 hover:scale-110"
+              class="w-48 rounded-full bg-white text-lg shadow-sm text-primary text-blue-200 font-semibold p-4 transition-all duration-500 ease-in-out hover:bg-primary hover:text-white transform hover:-translate-y-1 hover:scale-110 lg:ml-16"
             >
               Explorar
             </button>
           </div>
-          <div class="w-full h-full">
-            <img src="./img/sanFrancisco.jpg" alt="" />
+          <div
+            class="w-full h-full lg:h-96 lg:bg-sanFranciscoDesktop lg:bg-cover lg:bg-center"
+          >
+            <img class="lg:hidden" src="./img/sanFrancisco.jpg" alt="" />
           </div>
         </div>
       </div>
       <main class="w-full pl-3 pt-10 pb-10">
         <p class="text-3xl font-semibold text-primary mb-6">Recomendados</p>
         <div
-          id="recomendadas"
+          id="recomendados"
           class="p-4 flex h-72 flex-row overflow-x-auto overscroll-x-auto overscroll-x-contain [@media(max-width:767px)]:scrollbar-hide space-x-10"
         >
           <div class="Card">
@@ -165,6 +179,109 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+    <footer class="w-full h-auto bg-gray-100 p-6 space-y-2">
+      <p class="text-lg font-bold">Acerca de</p>
+      <p class="text-sm text-gray-300">Inversionistas</p>
+      <p class="text-sm text-gray-300">Empleos</p>
+      <p class="text-sm text-gray-300">Terminos y Condiciones</p>
+      <p class="text-sm text-gray-300">Platzi Travel, Inc.</p>
+      <p class="text-sm text-gray-300">Síguenos</p>
+      <div class="w-full flex space-x-3 justify-center">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-steam"></i>
+        <i class="fa-brands fa-facebook"></i>
+      </div>
+    </footer>
+    <div
+      class="w-full h-10 bg-white fixed left-0 bottom-0 shadow-md flex space-x-4 justify-center"
+      id="tab_bar"
+    >
+      <a href="#home">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-7 h-7"
+        >
+          <path
+            class="text-gray-500"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25"
+          />
+        </svg>
+      </a>
+      <a href="#rentas_destacadas">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-7 h-7"
+        >
+          <path
+            class="text-red-400"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"
+          />
+        </svg>
+      </a>
+      <a href="#recomendados">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-7 h-7"
+        >
+          <path
+            class="text-gray-500"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
+          />
+        </svg>
+      </a>
+      <button class="flex justify-start">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-7 h-7"
+        >
+          <path
+            class="fill-current text-gray-500"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21.752 15.002A9.718 9.718 0 0118 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 003 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 009.002-5.998z"
+          />
+        </svg>
+      </button>
+      <a href="#">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-7 h-7"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z"
+          />
+        </svg>
+      </a>
+    </div>
   </body>
 </html>
