--- a/public/index.html
+++ b/public/index.html
@@ -113,30 +113,34 @@
           </div>
         </div>
       </main>
-      <div class="px-3 h-auto w-full" id="rentas_destacadas">
+      <div class="px-3 h-auto w-full lg:px-10" id="rentas_destacadas">
         <p class="text-3xl text-primary font-semibold pb-6 mt-2">
           Rentas Destacadas
         </p>
-        <div
-          class="w-full h-full flex-col space-y-6 items-center justify-center"
-        >
+        <div class="w-full h-full flex-col items-center justify-center">
           <div class="Card-rentas bg-chicago">
             <p class="CardTitle">Chicago</p>
-            <p class="">2 habitaciones, baño y cocina</p>
+            <p>2 habitaciones, baño y cocina</p>
           </div>
-          <div class="Card-rentas bg-LA">
-            <p class="CardTitle">Los Angeles</p>
-            <p class="">4 habitaciones, 3 baños, cocina y piscina privada</p>
-          </div>
-          <div class="Card-rentas bg-miami">
-            <p class="CardTitle">Miami</p>
-            <p class="">
-              3 habitaciones, 2 baños, cocina y excelente vista al mar
-            </p>
+          <div class="lg:flex lg:h-full lg:w-full lg:space-x-4">
+            <div class="Card-rentas bg-LA lg:h-auto lg:bg-cover">
+              <p class="CardTitle">Los Angeles</p>
+              <p>4 habitaciones, 3 baños, cocina y piscina privada</p>
+            </div>
+            <div class="h-full w-full">
+              <div class="Card-rentas bg-miami">
+                <p class="CardTitle">Miami</p>
+                <p>3 habitaciones, 2 baños, cocina y excelente vista al mar</p>
+              </div>
+              <div class="Card-rentas bg-bali">
+                <p class="CardTitle">Bali</p>
+                <p>2 habitaciones, baño, cocina y pscina privada</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="w-full h-full px-6" id="faqs">
+      <div class="w-full h-full px-10 mb-5" id="faqs">
         <div class="w-full h-full flex flex-col space-y-4">
           <p class="text-3xl text-primary font-semibold mt-6">FAQs</p>
           <div>
@@ -179,7 +183,7 @@
         </div>
       </div>
     </section>
-    <footer class="w-full h-auto bg-gray-100 p-6 space-y-2">
+    <footer class="w-full h-auto bg-gray-100 px-10 py-6 space-y-2">
       <p class="text-lg font-bold">Acerca de</p>
       <p class="text-sm text-gray-300">Inversionistas</p>
       <p class="text-sm text-gray-300">Empleos</p>
