--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="flex space-x-8">
         <a class="font-bold text-sm text-primary dark:text-white" href="#home">Inicio</a>
-        <a class="font-bold text-sm text-primary dark:text-white" href="#recomendados">Remomendados</a>
+        <a class="font-bold text-sm text-primary dark:text-white" href="#recomendados">Recomendados</a>
         <a class="font-bold text-sm text-primary dark:text-white" href="#rentas_destacadas">Rentas</a>
         <a class="font-bold text-sm text-primary dark:text-white" href="#faqs">FAQS</a>
         <a class="font-bold text-sm text-primary dark:text-white" href="#sobre_nosotros">Sobre nosotros</a>
